improve full roundtrip of data import

--- a/Importing data into Neo4j without jQAssistant.ipynb
+++ b/Importing data into Neo4j without jQAssistant.ipynb
@@ -1176,8 +1176,35 @@
    "source": [
     "query=\"\"\"\n",
     "   MATCH (n:JType)\n",
-    "   MATCH (m:JMeasure)\n",
-    "   DETACH DELETE n, m\n",
+    "   DETACH DELETE n\n",
+    "\"\"\"\n",
+    "graph.run(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a68b6366",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "(No data)"
+      ],
+      "text/plain": [
+       "(No data)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "   MATCH (n:JMeasure)\n",
+    "   DETACH DELETE n\n",
     "\"\"\"\n",
     "graph.run(query)"
    ]
@@ -1192,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "128664bf",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1326,7 @@
        "871  PetClinicApplication  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "8f0539ea",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1405,7 @@
        "4  org.springframework.samples.petclinic.owner.Owner                 Owner"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "8f295674",
    "metadata": {},
    "outputs": [
@@ -1421,21 +1448,21 @@
        "(No data)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query=\"\"\"\n",
-    "  CREATE INDEX ON :J(fqn)\n",
+    "  CREATE INDEX ON :JType(fqn)\n",
     "\"\"\"\n",
     "graph.run(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e2e6ee8e",
    "metadata": {},
    "outputs": [
@@ -1510,7 +1537,7 @@
        "4  org.springframework.samples.petclinic.owner.Owner  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1538,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "1f9d2863",
    "metadata": {},
    "outputs": [
@@ -1650,7 +1677,7 @@
        "4   org.springframework.samples.petclinic.model.Vets  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "154c82b4",
    "metadata": {},
    "outputs": [
@@ -1717,7 +1744,7 @@
        "2  org.springframework.samples.petclinic.model.Pe...    1.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "43cf74be",
    "metadata": {},
    "outputs": [
@@ -1827,7 +1854,7 @@
        "4  org.springframework.samples.petclinic.owner.Vi...    49       31     12"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1838,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "1b795fc7",
    "metadata": {},
    "outputs": [
@@ -1931,7 +1958,7 @@
        "4       49          31        12  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1969,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "5ff08ede",
    "metadata": {},
    "outputs": [
@@ -2000,99 +2027,99 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>org.springframework.samples.petclinic.owner.Ow...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>org.springframework.samples.petclinic.owner.Pet</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>org.springframework.samples.petclinic.owner.Pe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>org.springframework.samples.petclinic.owner.Pe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>org.springframework.samples.petclinic.owner.Pe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>org.springframework.samples.petclinic.owner.Pe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>org.springframework.samples.petclinic.owner.Pe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
        "      <td>org.springframework.samples.petclinic.owner.Vi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>1</th>\n",
        "      <td>org.springframework.samples.petclinic.system.C...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>2</th>\n",
        "      <td>org.springframework.samples.petclinic.system.C...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>3</th>\n",
        "      <td>org.springframework.samples.petclinic.system.W...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>4</th>\n",
        "      <td>org.springframework.samples.petclinic.vet.Spec...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>5</th>\n",
        "      <td>org.springframework.samples.petclinic.vet.Vet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>6</th>\n",
        "      <td>org.springframework.samples.petclinic.vet.VetC...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>7</th>\n",
        "      <td>org.springframework.samples.petclinic.vet.VetR...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>8</th>\n",
        "      <td>org.springframework.samples.petclinic.vet.Vets</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>9</th>\n",
        "      <td>org.springframework.samples.petclinic.visit.Visit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>10</th>\n",
        "      <td>org.springframework.samples.petclinic.visit.Vi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>11</th>\n",
        "      <td>org.springframework.samples.petclinic.PetClini...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>12</th>\n",
        "      <td>org.springframework.samples.petclinic.model.Ba...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>13</th>\n",
        "      <td>org.springframework.samples.petclinic.model.Na...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>14</th>\n",
        "      <td>org.springframework.samples.petclinic.model.Pe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>15</th>\n",
        "      <td>org.springframework.samples.petclinic.owner.Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>16</th>\n",
        "      <td>org.springframework.samples.petclinic.owner.Ow...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>org.springframework.samples.petclinic.owner.Ow...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>org.springframework.samples.petclinic.owner.Pet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>org.springframework.samples.petclinic.owner.Pe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>org.springframework.samples.petclinic.owner.Pe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>org.springframework.samples.petclinic.owner.Pe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>org.springframework.samples.petclinic.owner.Pe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>org.springframework.samples.petclinic.owner.Pe...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2100,33 +2127,33 @@
       ],
       "text/plain": [
        "                                                n.fqn\n",
-       "0   org.springframework.samples.petclinic.owner.Ow...\n",
-       "1     org.springframework.samples.petclinic.owner.Pet\n",
-       "2   org.springframework.samples.petclinic.owner.Pe...\n",
-       "3   org.springframework.samples.petclinic.owner.Pe...\n",
-       "4   org.springframework.samples.petclinic.owner.Pe...\n",
-       "5   org.springframework.samples.petclinic.owner.Pe...\n",
-       "6   org.springframework.samples.petclinic.owner.Pe...\n",
-       "7   org.springframework.samples.petclinic.owner.Vi...\n",
-       "8   org.springframework.samples.petclinic.system.C...\n",
-       "9   org.springframework.samples.petclinic.system.C...\n",
-       "10  org.springframework.samples.petclinic.system.W...\n",
-       "11  org.springframework.samples.petclinic.vet.Spec...\n",
-       "12      org.springframework.samples.petclinic.vet.Vet\n",
-       "13  org.springframework.samples.petclinic.vet.VetC...\n",
-       "14  org.springframework.samples.petclinic.vet.VetR...\n",
-       "15     org.springframework.samples.petclinic.vet.Vets\n",
-       "16  org.springframework.samples.petclinic.visit.Visit\n",
-       "17  org.springframework.samples.petclinic.visit.Vi...\n",
-       "18  org.springframework.samples.petclinic.PetClini...\n",
-       "19  org.springframework.samples.petclinic.model.Ba...\n",
-       "20  org.springframework.samples.petclinic.model.Na...\n",
-       "21  org.springframework.samples.petclinic.model.Pe...\n",
-       "22  org.springframework.samples.petclinic.owner.Owner\n",
-       "23  org.springframework.samples.petclinic.owner.Ow..."
+       "0   org.springframework.samples.petclinic.owner.Vi...\n",
+       "1   org.springframework.samples.petclinic.system.C...\n",
+       "2   org.springframework.samples.petclinic.system.C...\n",
+       "3   org.springframework.samples.petclinic.system.W...\n",
+       "4   org.springframework.samples.petclinic.vet.Spec...\n",
+       "5       org.springframework.samples.petclinic.vet.Vet\n",
+       "6   org.springframework.samples.petclinic.vet.VetC...\n",
+       "7   org.springframework.samples.petclinic.vet.VetR...\n",
+       "8      org.springframework.samples.petclinic.vet.Vets\n",
+       "9   org.springframework.samples.petclinic.visit.Visit\n",
+       "10  org.springframework.samples.petclinic.visit.Vi...\n",
+       "11  org.springframework.samples.petclinic.PetClini...\n",
+       "12  org.springframework.samples.petclinic.model.Ba...\n",
+       "13  org.springframework.samples.petclinic.model.Na...\n",
+       "14  org.springframework.samples.petclinic.model.Pe...\n",
+       "15  org.springframework.samples.petclinic.owner.Owner\n",
+       "16  org.springframework.samples.petclinic.owner.Ow...\n",
+       "17  org.springframework.samples.petclinic.owner.Ow...\n",
+       "18    org.springframework.samples.petclinic.owner.Pet\n",
+       "19  org.springframework.samples.petclinic.owner.Pe...\n",
+       "20  org.springframework.samples.petclinic.owner.Pe...\n",
+       "21  org.springframework.samples.petclinic.owner.Pe...\n",
+       "22  org.springframework.samples.petclinic.owner.Pe...\n",
+       "23  org.springframework.samples.petclinic.owner.Pe..."
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2143,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "7750a7cb",
    "metadata": {},
    "outputs": [
@@ -2203,7 +2230,7 @@
        "2  org.springframework.samples.petclinic.model.Pe...       25      1.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2235,7 +2262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
